kubernetes/05-easyshop-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyshop-deployment
  namespace: easyshop
  labels:
    app: easyshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop
  template:
    metadata:
      labels:
        app: easyshop
    spec:
      containers:
      - name: easyshop
        image: isthatyou/easyshop-mainapp:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 3000
        resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"

        startupProbe:
          httpGet:
          path: /
          port: 3000
          periodSeconds: 10
          failureThreshold: 30
        readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
        livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 20
