kubernetes/09-mongodb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: easyshop
  labels:
    app: mongodb
spec:
  serviceName: mongodb-svc
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb 
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-storage 
          mountPath: /data/db
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: mongodb-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
