kubernetes/10-mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: easyshop
  labels:
    app: mongodb
spec:
  type: NodePort
  selector:
    app: mongodb
